<resources>
    <string name="app_name">Bhatti Vikramarka Mallu</string>
    <string name="banner_ad_unit_id">ca-app-pub-1682661172838395/4139166277</string>
    <string name="are_u_sure_u_want_to_exit">Are you sure, you want to Exit?</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="gallery">Gallery</string>
    <string name="videos">Videos</string>
    <string name="dailyactivities">Daily Activities</string>
    <string name="complaintbox">Complaint Box</string>
    <string name="audiosongs">Audio Songs</string>
    <string name="contactus">Contact Us</string>
    <string name="english">English</string>
    <string name="telugu">తెలుగు</string>
    <string name="hindi">हिंदी</string>
    <string name="fullname">Full Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="district">District</string>
    <string name="constituencies">Constituencies</string>
    <string name="mandal">Mandal</string>
    <string name="village">Village</string>
    <string name="description">Description</string>
    <string name="uploadimage">Upload Image</string>
    <string name="submit">SUBMIT</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="address">1-835,Sundaraiah Nagar,Madhira (v) &amp;(M),Khammam District.</string>
    <string name="about">ABOUT</string>
    <string name="president">Founder &amp; President(Telangana Jagruthi)</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="pls_name">Please Enter Full Name</string>
    <string name="pls_mobileno">Please Enter Mobile Number</string>
    <string name="pls_district">Please Select District</string>
    <string name="pls_constituences">Please Enter Constituencies</string>
    <string name="pls_mandal">Please Enter Mandal</string>
    <string name="pls_village">Please Enter Village</string>
    <string name="pls_description">Please Enter Description</string>
    <string name="pls_check_internet">Please check your internet connection and try again later</string>
    <string name="something_wrong">something went wrong, please try again</string>
    <string name="mobile_length">Mobile number should have 10 - 12 numbers</string>\
    <string name="profiledata">Bhatti Vikramarka Mallu hails from Snanala Laxmipuram of Wyra Mandal in Khammam District in Telangana State, India.\n\nPost completion of his schooling in his village, to cherish his dreams he arrived at Hyderabad, the then Capital of Andhra Pradesh, for further studies.\n\nHe was always focussed on what to study, where to study, and to further his goal of entering active politics to help weaker &amp; poorer sections of the society to improve their quality of life.  The main motive of his plan of entering active politics is to change the society for a better living.  He always believed that the same is a possibility by getting elected into legislative to enact useful and meaningful Acts; which would lay the road to bring positive changes for the future generations.\n\nHe pursued his graduation from renowned Nizam College (Hyderabad), where he not only had an opportunity to learn various subjects, but also to closely watch the political happenings in the city which is base for State politics.  He was always determined to enter the Indian politics having acquired enough knowledge on ground realities and regional/local history.  Furtherance to fulfil his dreams, he joined in Central University (University of Hyderabad) to study the Polity and History.  This is where he studied in detail the History of Telangana, History of India, and History of various other countries; he also studied various philosophies of the world leaders and noted philosophers.  This had given him the outlook on various political thoughts, be it on Marxism, Buddhism, Confucianism, and Gandhism, etc.  He has got thorough knowledge on practices of various political thoughts that are suited to different societies in India and abroad.  This will surely make him “special” from other leaders of this region.  He is undoubtedly unique in his style of approach.\n\nHe has got complete knowledge on Telangana Region from the rulers of Kingdoms to the recently concluded combined state rule.  He is not only the best at understanding the inequalities/discriminations that prevail in the society, but also has a strong action plan to curb the discriminations to uplift the society.  Having born in a socially backward community of Scheduled Caste (SC), he himself had tasted the bitterness that was prevailing in the society.\n\nHis constant dream to become a leader; and his inherent leadership qualities have lead him to start an Alumni Association in University of Hyderabad.  He was also founder President of the Association.\n\nHis focus from schooling till completion of his higher studies was to get equipped with enough “knowledge capital” to fight it out in the political warfare.\n\nThough spending many years in Congress Party, he has got his first recognition in 1990 when he was chosen as Executive Committee Member (ECM) of APCC.  His term as successful ECM ended in two years.  His abilities were recognized and his knowledge was respected by getting him nominated as one of the Directors of Andhra Bank, a nationalized bank, in 1995.  He had served successfully in this capacity and had an opportunity to introduce many beneficial schemes for the Farmers and Students Communities.  He was instrumental to introduce schemes such as “Dr Pattabhi Kisan Credit Card” and “Dr Pattabhi Vidya Jyothi Schemes”. It was five(5) year stint and his contribution was enormous.\n\nIt was his proven skills in both the positions in APCC and in Andhra Bank that have moved him further by elevating him as APCC Secretary to serve for 4 years from 1999 to 2003.\n\nThough his contributions for all the above positions have given him happiness, his inner zeal of delivering something bigger for the Society has never allowed him to stop dreaming.  This had given him a glimpse of contesting for higher position to represent a Constituency.  He had decided to contest for the local authority’s election as Member of Legislative Council as Congress Party candidate from Khammam District in 2007.  It was repeated polling due to various reasons.  However, the winner was “Bhatti”.  This had proven that people of Khammam District were in total support of his leadership.\n\nHis position as MLC was for a short term of 2 years and the party has recognized his potentials and offered him the seat of Madhira Constituency to contest as MLA in 2009.  He was an undefeated leader and the same was proven once again by winning MLA contest in 2009 and 2014 consecutively.\n\nDuring his stint as MLA from 2009 to 2014, Congress Party has always shown the “special” attention to his able leadership and has given him additional responsibility as “Chief Whip” from 2009 to 2011 and “Deputy Speaker of the Assembly” from 2011 to 2013.  Both the capacities were performed with ease and his dream of leading at higher level is yet to be fulfilled.\n\nPost bifurcation of the Telugu State, the AICC President Smt. Sonia Gandhi ji and Vice President Rahul Gandhi ji have given him the responsibility as “Working President” of Telangana Pradesh Congress Committee (TPCC). This is surely a challenging position and a scope for proving his abilities to the fullest to streamline the party cadre and functioning.\n\nHe had toured various foreign countries on personal and professional interest – Singapore, Malaysia, Dubai, USA, UK, France, Germany, Italy and Switzerland, Holland, etc.  During his leisure time, he spends time on reading books of various political philosophies and noted personalities.  Touring villages and meeting new people is always his interest.</string>
    <string name="uploadpdf">Upload Pdf</string>
    <string name="address2">Flat No.40,BnReddy Colony,Road Number 14,Banjarahills,Hyderabad,500034,Telagana</string>
</resources>
